--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cycura Minerals - Battery Recycling Solutions</title>
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./index.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
@@ -565,6 +565,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
